--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,8 @@
             <li><a href="#events">Events</a></li>
             <li><a href="#rules">Details</a></li>
             <!-- Renamed Rules to Details generally matches better, or keep Rules if preferred. User said remove team/contact -->
-            <li><a href="register.html" class="nav-btn">Join Mission</a></li>
+            <li><a href="user_login.html">Login</a></li>
+            <li><a href="user_login.html" class="nav-btn">Join Mission</a></li>
         </ul>
         <div class="hamburger">
             <span class="bar"></span>
@@ -74,7 +75,7 @@
             </div>
 
             <div class="cta-buttons">
-                <a href="register.html" class="btn primary-btn glow-effect">Join
+                <a href="user_login.html" class="btn primary-btn glow-effect">Join
                     Mission</a>
                 <a href="brochure/solveathon1.0.pdf" download class="btn secondary-btn">Mission Brief</a>
             </div>
@@ -280,7 +281,7 @@
                             </div>
                             <p class="per-team" style="font-size: 0.8rem; margin-bottom: 0;">Per Team</p>
                         </div>
-                        <a href="register.html" class="btn primary-btn pulse-btn">Join Mission</a>
+                        <a href="user_login.html" class="btn primary-btn pulse-btn">Join Mission</a>
                     </div>
                 </div>
 
