--- a/frontend/user_register.html
+++ b/frontend/user_register.html
@@ -137,6 +137,7 @@
         </div>
     </footer>
 
+    <script src="config.js"></script>
     <script>
         // Loader
         window.addEventListener('load', () => {
@@ -188,7 +189,7 @@
 
             try {
                 // Send to Backend
-                const response = await fetch('http://127.0.0.1:5001/api/auth/signup', {
+                const response = await fetch(`${API_CONFIG.BASE_URL}/api/auth/signup`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(data)
