--- a/frontend/user_login.html
+++ b/frontend/user_login.html
@@ -112,6 +112,7 @@
         </div>
     </footer>
 
+    <script src="config.js"></script>
     <script>
         // Loader
         window.addEventListener('load', () => {
@@ -163,7 +164,7 @@
 
             try {
                 // Ensure using port 5001 as fixed previously
-                const response = await fetch('http://localhost:5001/api/auth/login', {
+                const response = await fetch(`${API_CONFIG.BASE_URL}/api/auth/login`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(data)
