feat: Add Close Button to Message Modal

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -270,6 +270,7 @@
     <!-- Message Modal (Generic for Success/Error) -->
     <div id="message-modal" class="success-modal">
         <div class="success-content" id="modal-content">
+            <button class="close-modal-btn" onclick="closeModal()"><i class="fa-solid fa-xmark"></i></button>
             <i class="fa-solid fa-circle-check success-icon" id="modal-icon"></i>
             <h2 class="success-title" id="modal-title">Mission Confirmed!</h2>
             <p id="modal-text" class="success-message">Welcome to the squadron.</p>
