register page updated

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -74,7 +74,7 @@
                     <ul class="reg-features">
                         <li><i class="fa-solid fa-check"></i> Standard Hardware Access</li>
                         <li><i class="fa-solid fa-check"></i> 24H Hackathon Access</li>
-                        <li><i class="fa-solid fa-check"></i> Certifications & Swags</li>
+                        <li><i class="fa-solid fa-check"></i> Cash Pool Rewards</li>
                     </ul>
                     <button class="btn primary-btn full-width-btn" onclick="showForm('UG')">
                         Join Mission
