--- a/frontend/user_register.html
+++ b/frontend/user_register.html
@@ -67,8 +67,8 @@
                         <label>Category</label>
                         <select name="category"
                             style="background: rgba(255,255,255,0.05); border: 1px solid var(--glass-border); padding: 12px; color: #fff; width: 100%; border-radius: 5px;">
-                            <option value="UG" style="background: #000;">Cadet League (UG)</option>
-                            <option value="PG" style="background: #000;">Commander League (PG)</option>
+                            <option value="UG" style="background: #000;">Cadet League (BCA/BSc)</option>
+                            <option value="PG" style="background: #000;">Commander League (MCA/MSc/BE)</option>
                         </select>
                     </div>
 
