some texts are fixed for mobile size

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -324,7 +324,7 @@
             <h2 class="section-title">Mission Control</h2>
             <div class="team-grid">
                 <div class="team-card glass-panel">
-                    <h3>Dr. Srinivasa Mayya D</h3>
+                    <h3>Dr. Shrinivasa Mayya D</h3>
                     <p>Chief Convener</p>
                     <p class="role">Principal</p>
                 </div>
